--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,41 @@
-asgiref==3.8.1
-bcrypt==4.3.0
-blinker==1.9.0
-certifi==2025.7.9
+absl-py==2.3.1
+attrs==25.3.0
 cffi==1.17.1
-charset-normalizer==3.4.2
-click==8.1.7
-colorama==0.4.6
-cors==1.0.1
-Django==5.2.1
-dnspython==2.7.0
-dotenv==0.9.9
-email_validator==2.2.0
-filelock==3.18.0
-Flask==3.1.0
-Flask-Bcrypt==1.0.1
-flask-cors==6.0.1
-Flask-Email==1.4.4
-Flask-Login==0.6.3
-Flask-Mail==0.10.0
-Flask-MySQL==1.6.0
-Flask-MySQLdb==2.0.0
-Flask-WTF==1.2.2
-future==1.0.0
-gevent==25.5.1
-greenlet==3.2.3
-idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.4
+contourpy==1.3.3
+cycler==0.12.1
+filelock==3.19.1
+flatbuffers==25.2.10
+fonttools==4.59.1
+fsspec==2025.7.0
+jax==0.7.1
+jaxlib==0.7.1
+Jinja2==3.1.6
+joblib==1.5.1
+kiwisolver==1.4.9
 MarkupSafe==3.0.2
-mysql-connector-python==9.1.0
-mysqlclient==2.2.7
+matplotlib==3.10.5
+mediapipe==0.10.14
+ml_dtypes==0.5.3
+mpmath==1.3.0
+networkx==3.5
+numpy==2.2.6
+opencv-contrib-python==4.12.0.88
+opencv-python==4.12.0.88
+opt_einsum==3.4.0
+packaging==25.0
+pillow==11.3.0
+protobuf==4.25.8
 pycparser==2.22
-PyMySQL==1.1.1
-PySocks==1.7.1
-python-dotenv==1.1.0
-requests==2.32.4
-requests-file==2.1.0
-setuptools==80.9.0
-SQLAlchemy==2.0.41
-sqlparse==0.5.3
-tldextract==5.3.0
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+scikit-learn==1.7.1
+scipy==1.16.1
+six==1.17.0
+smbus2==0.5.0
+sounddevice==0.5.2
+SpeechRecognition==3.14.3
+sympy==1.14.0
+threadpoolctl==3.6.0
+torch==2.8.0
+torchvision==0.23.0
 typing_extensions==4.14.1
-tzdata==2025.2
-urllib3==2.5.0
-Werkzeug==3.1.3
-WTForms==3.2.1
-zope.event==5.1
-zope.interface==7.2
